--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId = "com.banpay.challenge.brandon"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21 // Best version for SDK
+        targetSdk = 33 // Best version to target
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
