--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,15 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
-  cached_network_image: ^3.4.1
   flutter:
     sdk: flutter
-  http:
-  shared_preferences: ^2.5.2
+  dio: ^5.8.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  cached_network_image: ^3.4.1
+  flutter_svg: ^2.0.17
+  flutter_riverpod: ^2.6.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +23,8 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   change_app_package_name: ^1.4.0
   flutter_launcher_icons: "^0.14.3"
+  build_runner: ^2.0.0
+  hive_generator: ^1.1.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -30,6 +36,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon/
+    - assets/icons/
+    - assets/images/
     - path: assets/dev/
       flavors:
         - dev
